Implement anticipated functionality on Angular client (#16)
* Implement IsAuth RPC to have the Go server verify the access token without also querying user data
* Refactor CurrentUser RPC to provide full user data
* Create app initialiser provider to load state on Angular client
* Implement all anticipated routes, services, and components on Angular client
