# gen/proto/server/service_grpc.pb.go
@@ -19,6 +19,7 @@ import (
 const _ = grpc.SupportPackageIsVersion7
 
 const (
+	IdentityService_IsAuth_FullMethodName          = "/proto.IdentityService/IsAuth"
 	IdentityService_CurrentUser_FullMethodName     = "/proto.IdentityService/CurrentUser"
 	IdentityService_Login_FullMethodName           = "/proto.IdentityService/Login"
 	IdentityService_Logout_FullMethodName          = "/proto.IdentityService/Logout"
@@ -32,6 +33,7 @@ const (
 //
 // For semantics around ctx use and closing/ending streaming RPCs, please refer to https://pkg.go.dev/google.golang.org/grpc/?tab=doc#ClientConn.NewStream.
 type IdentityServiceClient interface {
+	IsAuth(ctx context.Context, in *IsAuthRequest, opts ...grpc.CallOption) (*IsAuthReponse, error)
 	CurrentUser(ctx context.Context, in *CurrentUserRequest, opts ...grpc.CallOption) (*CurrentUserReponse, error)
 	Login(ctx context.Context, in *LoginRequest, opts ...grpc.CallOption) (*LoginReponse, error)
 	Logout(ctx context.Context, in *LogoutRequest, opts ...grpc.CallOption) (*LogoutReponse, error)
@@ -47,6 +49,15 @@ type identityServiceClient struct {
 
 func NewIdentityServiceClient(cc grpc.ClientConnInterface) IdentityServiceClient {
 	return &identityServiceClient{cc}
+}
+
+func (c *identityServiceClient) IsAuth(ctx context.Context, in *IsAuthRequest, opts ...grpc.CallOption) (*IsAuthReponse, error) {
+	out := new(IsAuthReponse)
+	err := c.cc.Invoke(ctx, IdentityService_IsAuth_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
 }
 
 func (c *identityServiceClient) CurrentUser(ctx context.Context, in *CurrentUserRequest, opts ...grpc.CallOption) (*CurrentUserReponse, error) {
@@ -116,6 +127,7 @@ func (c *identityServiceClient) RegisterFinish(ctx context.Context, in *Register
 // All implementations must embed UnimplementedIdentityServiceServer
 // for forward compatibility
 type IdentityServiceServer interface {
+	IsAuth(context.Context, *IsAuthRequest) (*IsAuthReponse, error)
 	CurrentUser(context.Context, *CurrentUserRequest) (*CurrentUserReponse, error)
 	Login(context.Context, *LoginRequest) (*LoginReponse, error)
 	Logout(context.Context, *LogoutRequest) (*LogoutReponse, error)
@@ -130,6 +142,9 @@ type IdentityServiceServer interface {
 type UnimplementedIdentityServiceServer struct {
 }
 
+func (UnimplementedIdentityServiceServer) IsAuth(context.Context, *IsAuthRequest) (*IsAuthReponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method IsAuth not implemented")
+}
 func (UnimplementedIdentityServiceServer) CurrentUser(context.Context, *CurrentUserRequest) (*CurrentUserReponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method CurrentUser not implemented")
 }
@@ -162,6 +177,24 @@ type UnsafeIdentityServiceServer interface {
 
 func RegisterIdentityServiceServer(s grpc.ServiceRegistrar, srv IdentityServiceServer) {
 	s.RegisterService(&IdentityService_ServiceDesc, srv)
+}
+
+func _IdentityService_IsAuth_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(IsAuthRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(IdentityServiceServer).IsAuth(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: IdentityService_IsAuth_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(IdentityServiceServer).IsAuth(ctx, req.(*IsAuthRequest))
+	}
+	return interceptor(ctx, in, info, handler)
 }
 
 func _IdentityService_CurrentUser_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
@@ -297,6 +330,10 @@ var IdentityService_ServiceDesc = grpc.ServiceDesc{
 	ServiceName: "proto.IdentityService",
 	HandlerType: (*IdentityServiceServer)(nil),
 	Methods: []grpc.MethodDesc{
+		{
+			MethodName: "IsAuth",
+			Handler:    _IdentityService_IsAuth_Handler,
+		},
 		{
 			MethodName: "CurrentUser",
 			Handler:    _IdentityService_CurrentUser_Handler,
